style(sidebar): fixed too small content

--- a/app/client/stylesheets/components/pu-sidebar.sass
+++ b/app/client/stylesheets/components/pu-sidebar.sass
@@ -1,6 +1,6 @@
 .pu-sidebar
     .pu-sidebar-wrap
-        width: 280px
+        width: 350px
 
         > section
             position: relative
